<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="WelcomeInCalculationApp">Welcome in the CalculationApp!</string>
    <string name="title_activity_menu">menuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_history">History</string>
    <string name="calculatorCharacterc">C</string>
    <string name="calculatorCharacterOpenBracket">(</string>
    <string name="calculatorCharacterCloseBracket">)</string>
    <string name="calculatorCharacterDivide">/</string>
    <string name="calculatorCharacter7">7</string>
    <string name="calculatorCharacter8">8</string>
    <string name="calculatorCharacter9">9</string>
    <string name="calculatorCharacter4">4</string>
    <string name="calculatorCharacter5">5</string>
    <string name="calculatorCharacter6">6</string>
    <string name="calculatorCharacter1">1</string>
    <string name="calculatorCharacter2">2</string>
    <string name="calculatorCharacter3">3</string>
    <string name="calculatorCharacter0">0</string>
    <string name="calculatorCharacterDecimalPoint">.</string>
    <string name="calculatorCharacterEqual">=</string>
    <string name="calculatorCharacterAdd">+</string>
    <string name="calculatorCharacterSubtract">-</string>
    <string name="calculatorCharacterMultiply">*</string>
    <string name="calculatorCharacterRemoveLast"><![CDATA[<-/-]]></string>
</resources>